--- a/public/style.css
+++ b/public/style.css
@@ -387,3 +387,77 @@ html {
 .fade-in-out {
     animation: fadeInOut 2s ease-in-out 0s 2; /* Durata di 2 secondi, ripetuta 2 volte */
 }
+
+
+/* page 4 */
+
+.page4 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+}
+
+.year-choice {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.year-circle {
+    width: 1700px;
+    height: 2250px;
+    background-color: white;
+    background: linear-gradient(315deg, white 26%, #E1E1E1 100%);
+    border-radius: 9999px;
+    filter: blur(2px);
+    position: absolute;
+    top: 70%;
+    transform: translate(-0%, 7%);
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+}
+
+.year-circle::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 2px;
+    height: 100%;
+    background-color: black;
+    transform: translateX(-50%);
+}
+
+.year-container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    font-family: "acumin-pro", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.year {
+    position: absolute;
+    transform-origin: center;
+    transition: transform 0.4s ease-out;
+    opacity: 0.5;
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin: 0;
+}
+
+.year.active {
+    opacity: 1;
+    font-size: 3rem;
+    font-weight: 700;
+}
