--- a/public/style.css
+++ b/public/style.css
@@ -11,15 +11,27 @@ body {
 }
 
 /* Varianti della famiglia di font "Acumin Pro" */
+.font-thin {
+    font-family: "mundial", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+}
+
 .font-light {
-    font-family: "acumin-pro", sans-serif;
+    font-family: "mundial", sans-serif;
     font-weight: 300;
     font-style: normal;
 }
 
-.font-bold {
-    font-family: "acumin-pro", sans-serif;
-    font-weight: 700;
+.font-regular {
+    font-family: "mundial", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.font-DemiBold {
+    font-family: "mundial", sans-serif;
+    font-weight: 600;
     font-style: normal;
 }
 
@@ -40,11 +52,37 @@ html {
   font-family: "acumin-pro", sans-serif;
 }
 
-/* Animazione di opacità per l'immagine */
-.background {
-    transition: opacity 1s ease-in-out; /* La durata della transizione è 1s */
-    opacity: 1; /* Imposta l'opacità iniziale a 100% */
+.page1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 20px;
 }
+
+.begin-instructions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.begin-instructions h4 {
+    font-size: 40px;
+    text-align: center;
+    margin: 0;
+    line-height: 1.2;
+}
+
+.logo {
+    position: absolute;
+    bottom: 3rem;
+    width: 3vw;
+    height: auto;
+}
+
+
 
 /*
 ██████╗  █████╗  ██████╗ ██╗███╗   ██╗ █████╗     ██████╗ 
@@ -102,7 +140,8 @@ html {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 33vw;
+
+    margin-bottom: 36vw;
 }
 
 .consequence {
@@ -112,13 +151,12 @@ html {
     position: absolute;
 }
 
-.just-like h4 {
+/* .just-like h4 {
     font-weight: 300;
     font-style: normal;
     margin-top: 5vw;
-    /* position: absolute; */
-    opacity: 0; /* Imposta l'opacità iniziale a 0% */
-}
+    opacity: 0;
+} */
 
 /* GENERAZIONE PAROLE REAZIONI */
 
@@ -185,8 +223,9 @@ html {
     align-items: stretch;
     justify-content: center;
 
-    margin-bottom: 12.5vw;
+    margin-bottom: 9vw;
 }
+
 
 .press{
     text-align: right;
@@ -401,7 +440,7 @@ html {
     padding: 20px;
 }
 
-.year-choice {
+.date-choice {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -411,7 +450,7 @@ html {
     height: 100vh;
 }
 
-.year-circle {
+.date-circle {
     width: 1700px;
     height: 2250px;
     background-color: white;
@@ -424,7 +463,7 @@ html {
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
 }
 
-.year-circle::before {
+.date-circle::before {
     content: '';
     position: absolute;
     top: 0;
@@ -435,7 +474,7 @@ html {
     transform: translateX(-50%);
 }
 
-.year-container {
+.date-container {
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -446,7 +485,7 @@ html {
     font-style: normal;
 }
 
-.year {
+.date {
     position: absolute;
     transform-origin: center;
     transition: transform 0.4s ease-out;
@@ -456,7 +495,7 @@ html {
     margin: 0;
 }
 
-.year.active {
+.date.active {
     opacity: 1;
     font-size: 3rem;
     font-weight: 700;
